# src/modules/Users/dtos/createUser/createUserRequestDTO.ts
@@ -1,8 +1,0 @@
-export interface CreateUserRequestDTO {
-  name: string;
-  email: string;
-  phone: string;
-  cpf: string;
-  birthday: any;
-  password: string;
-}
