# src/modules/Users/dtos/createUser/createUserResponseDTO.ts
@@ -1,9 +1,0 @@
-export interface CreateUserResponseDTO {
-  id: string;
-  name: string;
-  email: string;
-  phone: string | null;
-  cpf: string;
-  birthday: any;
-  password: undefined;
-}
